<resources>
    <string name="app_name">Dicoding Story App</string>
    <string name="people_talking_image">People talking image</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email_empty">Email field is empty!</string>
    <string name="not_valid_email">Not a valid email!</string>
    <string name="password_empty">Password field is empty</string>
    <string name="password_too_short">Password must at least 6 character</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="required">Required</string>
    <string name="name">Name</string>
    <string name="name_empty">Name field is empty</string>
    <string name="logout">Logout</string>
    <string name="create_story">Create Story</string>
    <string name="description">Description</string>
    <string name="upload">Upload</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="image_preview">Image Preview</string>
    <string name="captions">Captions</string>
    <string name="maps">Maps</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>